logs/huivo-thrift.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/huivo'...
Listing './lib/python3.5/site-packages/huivo/thrift'...
Listing './lib/python3.5/site-packages/huivo/thrift/client'...
Compiling './lib/python3.5/site-packages/huivo/thrift/client/Client.py'...
***   File "./lib/python3.5/site-packages/huivo/thrift/client/Client.py", line 37
    print "lookup providers"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/huivo/thrift/client/Configurator.py'...
***   File "./lib/python3.5/site-packages/huivo/thrift/client/Configurator.py", line 55
    print self._settings
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/huivo/thrift/common'...
Listing './lib/python3.5/site-packages/huivo/thrift/test'...
Compiling './lib/python3.5/site-packages/huivo/thrift/test/Test.py'...
***   File "./lib/python3.5/site-packages/huivo/thrift/test/Test.py", line 23
    print client.hello("sun quan")
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/huivo/thrift/test/TestService.py'...
***   File "./lib/python3.5/site-packages/huivo/thrift/test/TestService.py", line 98
    except huivo.thrift.common.ttypes.ThriftException, e:
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/huivo_thrift-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './share'...
Listing './share/python-wheels'...
